# Task4MVC

./: CMakeLists.txt  controller.cpp  controller.h  export_helper.cpp  export_helper.h  file_system_helper.cpp  file_system_helper.h  filesDAO.cpp  filesDAO.h  graphic_primitive.cpp  graphic_primitive.h  import_helper.cpp  import_helper.h  main.cpp  model.cpp  model.h  our_file.cpp  our_file.h  our_file_content.cpp  our_file_content.h  view.cpp  view.h
.github/workflows/: main.yml
